# hardware-software-interface

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: inductor scaling.xlsx  inductor_measurement.xlsx
examples/: loop_sum.asm
firmware/archive/: natcar_v1.1.ino  natcar_v1.4.ino
firmware/natcar_final/: natcar_final.ino
hardware/verilog-mini-cpu/: README.md
hardware/verilog-mini-cpu/examples/: loop_sum.hex
hardware/verilog-mini-cpu/src/: if_exwb_reg.v  register_file.v
hardware/verilog-mini-cpu/tb/: alu_tb.v  data_memory_tb.v  top_program_tb.v
hardware/verilog-mini-cpu/tools/: test_asm.py
include/: FreeRTOSConfig.h  logger_task.h  shared_defs.h
include/riscv_sim/: bits.hpp  cpu.hpp  decoder.hpp  encoder.hpp  errors.hpp  loader.hpp  memory.hpp  registers.hpp
riscv/isa-simulator/: README.md
robotics/natcar-autonomous-vehicle/: .gitignore  README.md
robotics/natcar-autonomous-vehicle/data/: inductor scaling.xlsx
robotics/natcar-autonomous-vehicle/docs/: calibration.md  control-algorithm.md  firmware-history.md  hardware.md  system-overview.md
rtos/freertos-task-scheduler/: .gitignore  README.md
rtos/freertos-task-scheduler/docs/: SETUP.md  (+1 more)
src/: alu.v  control_unit.v  cpu.cpp  data_memory.v  decoder.cpp  encoder.cpp  instruction_memory.v  led_task.c  loader.cpp  main.c  main.cpp  memory.cpp  registers.cpp  temp_task.c  top.v
tb/: register_file_tb.v  top_tb.v
tests/: test_decoder.cpp  test_framework.hpp  test_instructions.cpp  test_integration.cpp  test_main.cpp  test_memory.cpp  test_registers.cpp
tools/: asm.py  build_examples.cpp
(+14 files in other folders)
